# rs-hegp

./: Cargo.toml  README.md  chr1_sm.csv
docs/: 0.bootstrap.js  bootstrap.js  index.html
js/: util.js
src/: lib.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json
